style.css
/* ... */
.subtitle {
  margin-top: 1vw;
  font-family: 'Poppins', sans-serif;
  font-size: 16.5px;
  font-weight: 300; 
  color: aliceblue;
}

.dicons {
  display: flex;
  justify-items: center;
  align-items: center;
  width: 250px;
  border-radius: 0px 0px 15px 15px;
  overflow: hidden;
}

.dbtn {
  border: none;
  width: 66px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dsvg-icon {
  width: 25px;
  height: 25px;
  stroke: rgb(38, 59, 126);
}

.dcard::before {
  content: "";
  height: 50vh;
  width: 50vh;
  position: absolute;
  top: 16%;
  left: -20%;
  border-radius: 50%;
  border: 3vw solid rgba(255, 255, 255, 0.102);
  transition: all 0.8s ease;
}

.dcard:hover::before {
  border: 1.2vw solid rgba(255, 255, 255, 0.102);
  width: 10vh;
  height: 10vh;
  top: 25%;
  left: 65%;
  filter: blur(0rem);
}

.dname {
  font-weight: 600;
  letter-spacing: 0.1vw;
  display: flex;
  align-items: center;
  margin-top: 5vh;
}

.daccount {
  height: 3.6vh;
  margin-right: 1vw;
  /* width: 3.6vw; */
}

.dsmail {
  height: 3.8vh;
  margin-right: 1vw;
  /* width: 3.6vw; */
}


.dmail {
  font-weight: 600;
  letter-spacing: 0.1vw;
  margin-top: 4vh;
  display: flex;
  align-items: center;
}

.dicons {
  width: 100%;
  height: 10vh;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 3vh;
}

.dbtnbox {
  height: 5vh;
}

.svg-weapper-1 {
  width: 100%;
  height: 100%;
}

/* ================ Responsive ================ */

@media (max-width:1564px) {
  .skillimg {
    display: none;
  }

  .logos {
    width: 615px;
}

  .skillfull {
    padding: 5vw 5vw 5vw 5vw;
  }
}

@media (max-width:1730px) {
  .svg::before {
    height: 103vh;
    width: 106vh;
    top: -14%;
    left: -13%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }
}

@media (max-width:1600px) {
  .svg::before {
    height: 94vh;
    width: 96vh;
    top: -14%;
    left: -11%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }

  .cv {
    width: 130px;
  }

  .button {
    width: 130px;
  }
}

@media (max-width: 1480px) {
  .svg::before {
    height: 94vh;
    width: 97vh;
    top: -14%;
    left: -12%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }
}

@media (max-width: 1411px) {
  .svg::before {
    height: 96vh;
    width: 98vh;
    top: -14%;
    left: -16%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }

  /* .about .svg {
    width: 100px;
  } */

}

@media (max-width: 1359px) {
  .svg::before {
    height: 96vh;
    width: 98vh;
    top: -14%;
    left: -19%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }
}

@media (max-width: 1317px) {
  .svg::before {
    height: 96vh;
    width: 98vh;
    top: -14%;
    left: -22%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }
}

@media (max-width: 1282px){
  .svg::before {
    height: 96vh;
    width: 98vh;
    top: -14%;
    left: -24%;
    border-radius: 50%;
    border: 4.8vw solid rgba(255, 255, 255, 0.102);
  }
}

@media (max-width: 774px) {
  .content {
    align-items: flex-start;
  }

  .logos {
    margin-top: 12vw;
    width: 75vw;
    margin-left: 6vw;
}

  .description {
    display: none;
  }
  
  .mainarea {
    margin-top: 4vw;
    margin-bottom: 1.5vw;
    font-size: 21px;
  }
  
  .paragraph {
    font-size: 18px;
    display: block;
  }
}

@media (max-width: 657px){
  .mainarea {
    margin-top: 3.5vw;
    margin-bottom: 1.5vw;
    font-size: 19px;
  }
  
  .paragraph {
    font-size: 16px;
  }
}

@media (max-width:530px){
  .myskills {
    font-size: 20px;
  }

  .expertise {
    font-size: 30px;
  }
}

@media (max-width:594px){
  .mainarea {
    font-size: 18px;
  }
}

@media (max-width: 1468px){
  #projects {
    height: 165vh;
  }
}

@media (max-width: 450px){
  .myskills {
    font-size: 14px;
  }

  .skillfull {
    padding: 10vw 5vw 5vw 5vw;
}

.logos {
  width: 80vw;
  margin-left: 5vw;
}

.mainarea {
  margin-bottom: 4.5vw;
}

  .expertise {
    font-size: 25px;
  }
  .mainarea {
    font-size: 16px;
  }
  
  .paragraph {
    font-size: 14px;
  }

  .page {
    margin-top: 25px;
  }

  .card-container {
    margin-top: 2vw;
  }

  .btn {
    margin-top: 9px;
  }

}

@media (max-width: 947px){
  .heading {
    font-size: 30px;
  }

  .card {
    width: 390px;
  }

  .card-container {
    margin-top: 1.5vw;
  }

  .card-container .btn {
    margin-top: 12px;
  }

  .card img {
    height: 275px;
  }

  #projects {
    height: 140vh;
  }
}

@media (max-width: 829px){
  .card {
    width: 347px;
  }

  .card img {
    height: 245px;
  }

  #projects {
    height: 130vh;
  }

  .card-content {
    padding: 12px 26.4px 20.4px 26.4px;
  }

  .card-content h3 {
    font-size: 20px;
  }

}

@media (max-width: 745px){
  .card {
    width: 300px;
  }

  .card img {
    height: 200px;
  }

  #projects {
    height: 113vh;
  }

  .card-content h3 {
    font-size: 20px;
    margin-bottom: 4px;
  }

  .card-content {
    padding: 6px 20px 20px 20px;
    font-size: 11.85px;
}

  #projects {
    height: 107vh;
  }

  .card-container {
    margin-top: 2.1vw;
  
  }

  .btn {
    font-size: 13px;
    margin-top: 10px;
  }

}

@media (max-width: 638px){
  #projects {
    height: 150vh;
  }

  .heading {
    font-size: 25px;
}

  .page {
    margin-top: 25px;
  }
}

@media (max-width: 500px){
  .card {
    margin: 3.5vw;
  }

  .card-content h3 {
    margin-bottom: 6px;
  }

  .card-container .btn {
    margin-top: 9px;
}

.card-content {
  padding: 6px 20px 17px 17px;
}

  #projects {
    height: 150vh;
  } 
}
/* ... */

